<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_reminders"
        android:icon="@drawable/ic_reminder"
        android:title="@string/alarm"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tags"
        android:icon="@drawable/ic_tags"
        android:title="@string/tags"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_all_notes"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_calender"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />
</menu>