<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginStart="@dimen/spacing_20"
            android:layout_marginLeft="@dimen/spacing_20"
            android:layout_marginTop="@dimen/spacing_40"
            android:src="@mipmap/ic_launcher" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginLeft="@dimen/spacing_10"
            android:layout_marginTop="@dimen/spacing_10"
            android:text="@string/app_name"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_10"
            android:layout_marginLeft="@dimen/spacing_10"
            android:layout_marginBottom="@dimen/spacing_20"
            android:text="Memory usage: 502 kB"
            android:textColor="@color/transparent_white"
            android:textSize="@dimen/font_12" />
    </LinearLayout>

    <LinearLayout style="@style/home_side_menu_item_parent">

        <android.support.v7.widget.AppCompatImageView
            style="@style/home_side_menu_icon"
            android:src="@drawable/ic_all_notes" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/home_side_menu_textview"
            android:text="@string/all_notes" />
    </LinearLayout>

    <LinearLayout style="@style/home_side_menu_item_parent">

        <android.support.v7.widget.AppCompatImageView
            style="@style/home_side_menu_icon"
            android:src="@drawable/ic_favorite" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/home_side_menu_textview"
            android:text="@string/favorites" />
    </LinearLayout>

    <LinearLayout style="@style/home_side_menu_item_parent">

        <android.support.v7.widget.AppCompatImageView
            style="@style/home_side_menu_icon"
            android:src="@drawable/ic_reminder" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/home_side_menu_textview"
            android:text="@string/reminders" />
    </LinearLayout>

    <LinearLayout style="@style/home_side_menu_item_parent">

        <android.support.v7.widget.AppCompatImageView
            style="@style/home_side_menu_icon"
            android:src="@drawable/ic_tags" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/home_side_menu_textview"
            android:text="@string/tags" />
    </LinearLayout>

    <LinearLayout style="@style/home_side_menu_item_parent">

        <android.support.v7.widget.AppCompatImageView
            style="@style/home_side_menu_icon"
            android:src="@drawable/ic_trash" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/home_side_menu_textview"
            android:text="@string/trash" />
    </LinearLayout>

    <LinearLayout style="@style/home_side_menu_item_parent">

        <android.support.v7.widget.AppCompatImageView
            style="@style/home_side_menu_icon"
            android:src="@drawable/ic_settings" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/home_side_menu_textview"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>