<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="@dimen/spacing_15"
    android:background="@drawable/cornered_white">

    <RelativeLayout
        android:id="@+id/llTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_5"
        android:background="@drawable/background_input_tag"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHashTag"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_50"
            android:background="@drawable/background_hashtag"
            android:gravity="center"
            android:paddingStart="@dimen/spacing_10"
            android:paddingEnd="@dimen/spacing_10"
            android:text="#"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_50"
            android:background="@null"
            android:layout_toRightOf="@+id/tvHashTag"
            android:hint="@string/enter_tag_here"
            android:inputType="text"
            android:paddingStart="@dimen/spacing_5"
            android:paddingLeft="@dimen/spacing_5"
            android:paddingEnd="@dimen/spacing_5"
            android:paddingRight="@dimen/spacing_5"
            android:textAppearance="@style/CustomTextAppearance.Regular"
            android:textColor="@color/app_text_color"
            android:textColorHint="@color/edit_text_hint_color"
            android:textSize="@dimen/text_size_normal"
            android:layout_toEndOf="@+id/tvHashTag" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTag"
        android:layout_marginTop="@dimen/spacing_10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="end">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_5"
            android:text="@string/cancel_text"
            android:textAllCaps="false"
            android:textAppearance="@style/CustomTextAppearance.Light"
            android:textColor="@color/app_text_color"
            android:layout_marginRight="@dimen/spacing_10"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginEnd="@dimen/spacing_10" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_5"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textAppearance="@style/CustomTextAppearance.Light"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>
</RelativeLayout>
